src/app/grid/grid.component.css
.card {
  border-radius: 0;
  border: none;
  display: flex;
  flex-direction: column;
  margin-right: 1%;
  width: 30%;
}

.quickview {
  background-color: rgb(255,255,255,.9);
  width: 100%;
  position: absolute;
  text-align: center;
  top: 25%;
  z-index: 1;
}

.quickview p {
  cursor: pointer;
  font-size: 0.7rem;
  font-weight: 300;
  line-height: 3rem;
  margin: auto;
}

.quickview:hover {
  background-color: #00b089;
  color: white;
  transition: 0.3s;
}


p.grid-price {
  color: #75c044;
}

p.grid-name {
  color: #444;
  font-size: 1.2rem;
  font-weight: 300;
}

p.grid-name:hover {
  color: #00b089;
  cursor: pointer;
  transition: 0.3s;
}

